--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,6 +26,6 @@ jobs:
       - name: Deploy to S3
         run: aws s3 sync . s3://${{ secrets.S3_BUCKET_NAME }} --delete --exclude ".git/*" --exclude ".github/*"
 
-      # CloudFront Cache Invalidation
+      # Step 4: CloudFront Cache Invalidation
       - name: CloudFront Cache Invalidation
         run: aws cloudfront create-invalidation --distribution-id ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID }} --paths "/*"  # Invalidate CloudFront cache
